--- a/src/components/ProjectCard2.css
+++ b/src/components/ProjectCard2.css
@@ -144,19 +144,23 @@
   .image2 {
     height: 200px;
     width: 325px;
-    /* margin-top: 60px; */
   }
 
   .image2-container {
-    height: 200px;
+    height: 180px;
     width: 325px;
     margin-top: 60px;
     box-shadow: 1px 1px 1px 5px #121212;
-    /* margin-bottom: -60px; */
+  }
+
+  .image2-container::before {
+    left: -5px;
+    bottom: -5px;
+    height: 190px;
+    width: 335px;
   }
 
   .card2-title {
-    /* margin-top: -325px; */
     margin-top: -285px;
     margin-bottom: 225px;
     max-width: 95vw;
